# ferris-fencing

./: Cargo.toml  README.md
src/ckb_vm_glue/: Cargo.toml  lib.rs
src/ckb_vm_syscall/: Cargo.toml  build.rs  ecall32.s  lib.rs
src/demo_exe/: Cargo.toml  main.rs
src/demo_rt/: Cargo.toml  main.rs
src/example_bot/: Cargo.toml  main.rs
src/ff_local/: Cargo.toml  main.rs
src/ff_rt/: Cargo.toml  cost_model.rs  game.rs  lib.rs  transition.rs
src/ff_web/: Cargo.toml  main.rs
src/ff_web_common/: Cargo.toml  bot.rs  bot_exe.rs  bot_hash.rs  bot_id.rs  bot_name.rs  lib.rs  store.rs  types.rs
src/ff_web_json/: Cargo.toml  main.rs
web/: index.html  live.html
web/css/: ff.css  live.css
web/example-matches/: ex-01.json  ex-02.json  ex-03.json  ex-04.json  ex-05.json  ex-06.json  ex-07.json  ex-08.json  ex-09.json  ex-10.json
web/js/: live.js
