[workspace]
members = [
    "src/ckb_vm_glue",
    "src/ckb_vm_syscall",
    "src/demo_exe",
    "src/demo_rt",
    "src/example_bot",
    "src/ff_rt",
    "src/ff_local",
    "src/ff_web",
    "src/ff_web_common",
    "src/ff_web_json",
]

default-members = [
    "src/ff_local",
]

[profile.dev]
incremental = false
codegen-units = 1
