[package]
name = "demo_rt"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "demo-rt"
path = "main.rs"

[dependencies]
structopt = "0.3.3"
bytes = "0.4.12"
env_logger = "0.7.1"

[dependencies.ckb-vm]
git = "https://github.com/brson/ckb-vm.git"
rev = "f49edd17927d0158289a5f5ed500c86f5e0816c1"

[dependencies.b_error]
git = "https://github.com/brson/bloop.git"
rev = "474fc1309eff36a65113000eb6e0dcd9d9e95316"
