[package]
name = "ff_rt"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
bytes = "0.4.12"
log = "0.4.8"
serde = "1.0.101"
serde_derive = "1.0.101"
rand = "0.7.2"

[dependencies.ckb-vm]
git = "https://github.com/brson/ckb-vm.git"
rev = "f49edd17927d0158289a5f5ed500c86f5e0816c1"

[dependencies.b_error]
git = "https://github.com/brson/bloop.git"
rev = "474fc1309eff36a65113000eb6e0dcd9d9e95316"
